feat(staticanalysis): DomainAnalyzer — orchestrates classify → endpoints → methods → call graph
In-memory result only this session. endpoints sorted by (method, path);
classRoles + methodAnalyses are LinkedHashMap in path-sorted insertion
order (DomainAnalysisResult fixed to use unmodifiableMap to preserve
insertion order). MethodAnalysis.outgoingCalls intentionally empty — T3
will fill it when the branch analyzer needs per-method callees.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>