@@ -2,6 +2,8 @@ package io.graphrag.builder.staticanalysis.domain;
 
 import io.graphrag.model.Endpoint;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -23,9 +25,12 @@ public record DomainAnalysisResult(
         CallGraph callGraph) {
 
     public DomainAnalysisResult {
-        endpoints       = List.copyOf(Objects.requireNonNull(endpoints,       "endpoints"));
-        classRoles      = Map.copyOf(Objects.requireNonNull(classRoles,      "classRoles"));
-        methodAnalyses  = Map.copyOf(Objects.requireNonNull(methodAnalyses,  "methodAnalyses"));
+        endpoints      = List.copyOf(Objects.requireNonNull(endpoints,      "endpoints"));
+        // Use unmodifiableMap (not Map.copyOf) to preserve LinkedHashMap insertion order.
+        classRoles     = Collections.unmodifiableMap(
+                new LinkedHashMap<>(Objects.requireNonNull(classRoles,     "classRoles")));
+        methodAnalyses = Collections.unmodifiableMap(
+                new LinkedHashMap<>(Objects.requireNonNull(methodAnalyses, "methodAnalyses")));
         Objects.requireNonNull(callGraph, "callGraph");
     }
 }
